--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon src/index"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,4 +19,5 @@
     "mongoose": "^6.5.2",
     "uuid": "^8.3.2"
   }
+
 }
